--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
     "otp-generator": "^4.0.1",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
